--- a/for_simulation/login_style.css
+++ b/for_simulation/login_style.css
@@ -7,7 +7,7 @@
 }
 body{
   height: 100vh; 
-  display: flex;
+  /* display: flex; */
   align-items: center;
    text-align: center;
   font-family: sans-serif;
@@ -17,13 +17,17 @@ body{
   background-position: center;
   background-color: white;
 }
-.fuggy{
+.alert{
   position: absolute;
   top:0%;
+  width:100%;
+  margin-top: 63px;
+  
 }
 
 
 .container{
+   
   position: relative;
   max-width: 330px;
   background: whitesmoke;
@@ -154,6 +158,7 @@ form .button{
   padding: 60px 40px;
   border-radius: 0.5em;
   box-shadow: 4px 8px 8px #005b74;
+  margin-top: 43px;
 }
 }
 
@@ -166,6 +171,7 @@ form .button{
   padding: 60px 40px;
   border-radius: 0.5em;
   box-shadow: 4px 8px 8px #005b74;
+  margin-top: 43px;
 }
 }
 
@@ -178,6 +184,7 @@ form .button{
   padding: 60px 40px;
   border-radius: 0.5em;
   box-shadow: 4px 8px 8px #005b74;
+  margin-top: 43px;
 }
 }
 
@@ -190,5 +197,6 @@ form .button{
   padding: 60px 40px;
   border-radius: 0.5em;
   box-shadow: 4px 8px 8px #005b74;
+  margin-top: 43px;
 }
 }
